Fix video poster misaligned

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -406,6 +406,7 @@ body {
         }
       }
     }
+    width: 32rem;
     .file-page__playlist-collection__row {
       @extend .file-page__recommended-collection__row;
 
